# GlazeUI

./: Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.github/workflows/: build.yml
crates/core/: Cargo.toml
crates/core/src/: align.rs  backend.rs  color.rs  control.rs  helpers.rs  id.rs  lib.rs  margin.rs  padding.rs  style.rs  text_style.rs  weight.rs
crates/core/src/futures/: task.rs
crates/core/src/renderer/: backend.rs
crates/core/src/widget/: button.rs  container.rs  hstack.rs  image.rs  image_widget.rs  label.rs  mod.rs  spacer.rs  text.rs  vstack.rs
crates/core/src/window/: control.rs  level.rs  mod.rs  theme.rs  user_attention.rs
crates/glaze_components/: Cargo.toml
crates/glaze_components/src/: button.rs  container.rs  hstack.rs  lib.rs  spacer.rs  text.rs  vstack.rs
crates/glaze_core/: Cargo.toml
crates/glaze_core/src/: lib.rs  node.rs
crates/glaze_layout/: Cargo.toml
crates/glaze_layout/src/: lib.rs
crates/glazeui_canvas/: Cargo.toml
crates/glazeui_canvas/src/: canvas.rs  lib.rs  renderer.rs  shape.rs
crates/glazeui_canvas/src/renderer/: atlas.rs  color.rs  image.rs  vertex.rs
crates/glazeui_components/: Cargo.toml
crates/glazeui_components/src/: button.rs  container.rs  hstack.rs  lib.rs  spacer.rs  text.rs  ui_id.rs  vstack.rs
crates/glazeui_core/: Cargo.toml
crates/glazeui_core/src/: component.rs  node.rs
crates/glazeui_layout/: Cargo.toml
crates/glazeui_layout/src/: lib.rs
crates/glazeui_renderer/: Cargo.toml
crates/glazeui_renderer/src/: lib.rs  shader.wgsl  wgpu_ctx.rs
crates/layout/: Cargo.toml
crates/layout/src/: lib.rs
crates/layout/src/measure/: text.rs
crates/render/: Cargo.toml
crates/render/src/: draw.rs  lib.rs
crates/render/src/widgets/: draw_image.rs  draw_rect.rs  draw_text.rs  mod.rs
crates/vello/: Cargo.toml
crates/vello/src/: lib.rs
crates/vello/src/widgets/: draw_image.rs  draw_rectangle.rs  draw_text.rs  mod.rs  text.rs
crates/widget/: Cargo.toml
crates/window/: Cargo.toml
crates/window/src/: lib.rs
crates/winit/: Cargo.toml
crates/winit/src/: event.rs  lib.rs  window.rs
examples/array_counter/: Cargo.toml  README.md
examples/array_counter/src/: main.rs
examples/calculator/: Cargo.toml
examples/calculator/src/: main.rs
examples/clicker/: Cargo.toml  README.md
examples/clicker/src/: main.rs
examples/counter/: Cargo.toml  README.md
examples/counter/src/: main.rs
examples/ferris_image/: Cargo.toml  README.md
examples/ferris_image/src/: main.rs
examples/guess_number/: Cargo.toml  README.md
examples/guess_number/src/: main.rs
examples/hello_world/: Cargo.toml  README.md
examples/hello_world/src/: main.rs
examples/modify_window/: Cargo.toml  README.md
examples/modify_window/src/: main.rs
examples/random_cat/: Cargo.toml  README.md
examples/random_cat/src/: main.rs
examples/timer_async/: Cargo.toml  README.md
examples/timer_async/src/: main.rs
examples/weather/: Cargo.toml  README.md
examples/weather/src/: main.rs
src/: app.rs  application.rs  error.rs  fps.rs  layout.rs  lib.rs  mod.rs  types.rs
src/core/: app.rs  layout.rs  mod.rs  node.rs  ui.rs  widget.rs
src/layout/: engine.rs  measure_text.rs  mod.rs  style.rs
src/renderer/: mod.rs  wgpu.rs
src/renderer/components/: atlas.rs  canvas.rs  color.rs  image.rs  lib.rs  mod.rs  renderer.rs  shape.rs  vertex.rs
src/widgets/: button.rs  container.rs  hstack.rs  mod.rs  spacer.rs  text.rs  ui.rs  vstack.rs
src/widgets/utils/: mod.rs  types.rs
