[package]
name = "glazeui"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = { workspace = true }

[dependencies]
winit = "0.30.12"
wgpu = "27.0.1"
pollster = "0.4.0"
bytemuck = "1.24.0"
image = "0.25.9"
vello = "0.7.0"
parley = "0.7.0"
skrifa = "0.40.0"
glazeui_core = { version = "0.1.1", path = "crates/core" }
glazeui_winit = { version = "0.1.1", path = "crates/winit" }
glazeui_vello = { version = "0.1.1", path = "crates/vello" }
glazeui_layout = { version = "0.1.1", path = "crates/layout" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen-futures = "0.4.56"
web-sys = { version = "0.3.83", features = ["HtmlCollection", "Text"] }
web-time = "1.1.0"
wasm-bindgen = "=0.2.106"

[workspace]
members = ["crates/*",
    "examples/*"
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dest-hq/glazeui"
categories = ["gui"]
keywords = ["gui", "ui", "interface", "widgets"]
description = "Cross-platform GUI library, written in Rust"

[workspace.dependencies]
glazeui = { version = "0.1.1", path = "." }
glazeui_core = { version = "0.1.1", path = "crates/core" }
glazeui_winit = { version = "0.1.1", path = "crates/winit" }
glazeui_vello = { version = "0.1.1", path = "crates/vello" }
glazeui_layout = { version = "0.1.1", path = "crates/layout" }
winit = "0.30.12"
wgpu = "27.0.1"
vello = "0.7.0"
parley = "0.7.0"
skrifa = "0.40.0"
bytemuck = "1.24.0"
image = "0.25.9"
pollster = "0.4.0"
