[package]
name = "glazeui"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = { workspace = true }

[features]
default = ["skia", "cpu"]
skia = [
  "dep:multirender_skia",
  "glazeui_winit/skia",
  "glazeui_core/skia"
]
cpu = [
  "dep:multirender_vello_cpu",
  "glazeui_winit/cpu",
  "glazeui_core/cpu"
]
vello = [
  "dep:multirender_vello",
  "glazeui_winit/vello",
  "glazeui_core/vello"
]
hybrid = [
  "dep:multirender_vello_hybrid",
  "glazeui_winit/hybrid",
  "glazeui_core/hybrid"
]
async = ["tokio/macros", "tokio/rt-multi-thread", "glazeui_winit/async"]
all = ["skia", "cpu", "vello", "hybrid", "async"]

[dependencies]
winit = "0.30.12"
pollster = "0.4.0"
parley = "0.7.0"
glazeui_core.workspace = true
glazeui_winit.workspace = true
glazeui_layout.workspace = true
glazeui_render.workspace = true
multirender = {version = "0.1.0"}
multirender_skia = {version = "0.1.0", optional = true}
multirender_vello = {version = "0.1.0", optional = true}
multirender_vello_cpu = { version = "0.1.0", features = [
  "softbuffer_window_renderer",
], optional = true}
multirender_vello_hybrid = {version = "0.1.0", optional = true}
tokio = {version = "1.49.0", features = ["rt-multi-thread", "macros"], optional = true}

[workspace]
members = ["crates/*",
    "examples/*"
]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/dest-hq/glazeui"
categories = ["gui"]
keywords = ["gui", "ui", "interface", "widgets"]
description = "Cross-platform GUI library, written in Rust"

[workspace.dependencies]
glazeui = { version = "0.1.1", path = "." }
glazeui_core = { version = "0.1.1", path = "crates/core" }
glazeui_winit = { version = "0.1.1", path = "crates/winit" }
glazeui_layout = { version = "0.1.1", path = "crates/layout" }
glazeui_render = { version = "0.1.1", path = "crates/render" }
multirender = {version = "0.1.0"}
winit = "0.30.12"
parley = "0.7.0"
skrifa = "0.40.0"
image = "0.25.9"
pollster = "0.4.0"
peniko = "0.6.0"
kurbo = "0.13.0"
