[package]
name = "glazeui_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
vello.workspace = true
image.workspace = true
winit.workspace = true
smol.workspace = true