[package]
name = "glazeui_core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[features]
skia = [
]
cpu = [
]
vello = [
]
hybrid = [
]
all = ["skia", "cpu", "vello", "hybrid"]

[dependencies]
image.workspace = true
winit.workspace = true
peniko.workspace = true