# FORK OF https://github.com/ramp-stack/wgpu_canvas

[package]
name = "glazeui_canvas"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wgpu = { workspace = true, optional = true}
bytemuck = { version = "1.21.0", optional = true }
image = {package="image", version="0.25.5"}

[features]
default = ["canvas", "renderer"]
canvas = ["renderer"]
renderer = ["dep:wgpu", "dep:bytemuck"]
