[package]
name = "glazeui_renderer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
glazeui_core = { workspace = true }
glazeui_layout = { workspace = true }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
glyphon = "0.10.0"
cosmic-text = "0.15.0"
glazeui_canvas = { workspace = true}
taffy = { workspace = true }
