[package]
name = "glazeui_render"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[features]
skia = [
  "dep:multirender_skia",
  "glazeui_core/skia",
]
cpu = [
  "dep:multirender_vello_cpu",
  "glazeui_core/cpu",
]
vello = [
  "dep:multirender_vello",
  "glazeui_core/vello",
]
hybrid = [
  "dep:multirender_vello_hybrid",
  "glazeui_core/hybrid",
]
all = ["skia", "cpu", "vello", "hybrid"]

[dependencies]
multirender.workspace = true
multirender_skia = {version = "0.1.0", optional = true}
multirender_vello = {version = "0.1.0", optional = true}
multirender_vello_cpu = { version = "0.1.0", features = [
  "softbuffer_window_renderer",
], optional = true}
multirender_vello_hybrid = {version = "0.1.0", optional = true}

winit.workspace = true
peniko.workspace = true
parley.workspace = true
kurbo.workspace = true
glazeui_core.workspace = true
glazeui_layout.workspace = true
