[package]
name = "glazeui_vello"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
vello.workspace = true
parley.workspace = true
skrifa.workspace = true
bytemuck.workspace = true
glazeui_core.workspace = true
glazeui_layout.workspace = true
