[package]
name = "glazeui_winit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
winit.workspace = true
vello.workspace = true
glazeui_core.workspace = true
parley.workspace = true
glazeui_layout.workspace = true
pollster.workspace = true
glazeui_vello.workspace = true
