[package]
name = "glazeui_winit"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[features]
skia = [
  "dep:multirender_skia",
  "glazeui_core/skia",
  "glazeui_render/skia",
]
cpu = [
  "dep:multirender_vello_cpu",
  "glazeui_core/cpu",
  "glazeui_render/cpu",
]
vello = [
  "dep:multirender_vello",
  "glazeui_core/vello",
  "glazeui_render/vello",
]
hybrid = [
  "dep:multirender_vello_hybrid",
  "glazeui_core/hybrid",
  "glazeui_render/hybrid",
]
async = ["tokio/macros", "tokio/rt-multi-thread"]
all = ["skia", "cpu", "vello", "hybrid", "async"]

[dependencies]
winit.workspace = true
glazeui_core.workspace = true
parley.workspace = true
glazeui_layout.workspace = true
pollster.workspace = true
glazeui_render.workspace = true
multirender.workspace = true
multirender_skia = {version = "0.1.0", optional = true}
multirender_vello = {version = "0.1.0", optional = true}
multirender_vello_cpu = { version = "0.1.0", features = [
  "softbuffer_window_renderer",
], optional = true}
multirender_vello_hybrid = {version = "0.1.0", optional = true}
tokio = {version = "1.49.0", features = ["rt-multi-thread", "macros"], optional = true}