[package]
name = "random_cat"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
description.workspace = true

[dependencies]
glazeui = { workspace = true, features = ["async"] }
reqwest = { version = "0.13.2", features = ["blocking"] }
image = { workspace = true }
